--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Emergent | Fullstack App</title>
-        <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
+        <!-- Script emergent-main.js deshabilitado para desarrollo local -->
+        <!-- <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script> -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
